Fix text alignment

--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ section {
     width: 50%;
     height: auto;
     margin-left: 30%;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 h3 {
-    text-align: center;
+    text-align: left;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
     color: rgb(19, 17, 23);
